css/home.css
/* ... */
@media (max-width: 767px){

	.caption{
		width: 75%;
	}

	.work-spacer{
		display: inline-block !important;
		opacity: 0;
	}

	.workpage-work-section div a img{
		padding: 10px 0;
	}
	.workpage-work-section div{
		padding: 0 10px;
	}

}

@media (max-width: 550px){

	.col-xs-3{
		width: 43% !important;
	}

	.middle-content h2{
		right: -45px;
		text-align: right;
	}

	.flickity-page-dots{
		bottom: -45px !important;
	}

	.middle-content img{
		padding: 5px;
	}

	.gallery{
		padding-top: 30px;
	}

	.caption{
		margin: 75px auto 0;
	}

}

@media (max-width: 327px){

	.border-top div div{
		text-align: right;
		padding-right: 2px;
		font-size: 10px;
	}


}

